package vera.controllers;

import org.springframework.security.core.Authentication;
import org.springframework.security.core.authority.AuthorityUtils;
import org.springframework.security.core.context.SecurityContextHolder;
import org.springframework.stereotype.Controller;
import org.springframework.web.bind.annotation.GetMapping;

import java.util.Set;

@Controller
public class GeneralController {
    @GetMapping("/main")
    public String main(){
        Authentication authentication= SecurityContextHolder.getContext().getAuthentication();
        Set<String> roles = AuthorityUtils.authorityListToSet(authentication.getAuthorities());
        if(roles.contains("ROLE_ADMIN")){
            return "redirect:/admin/main";
        } else if(roles.contains("ROLE_USER")){
            return "redirect:/user/main";
        }else if(roles.contains("ROLE_WORKER")){
            return "redirect:/worker/main";
        }
        return "/main";
    }

    @GetMapping("/index")
    public String index() {
        return "redirect:/index";
    }
}
